<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#fffff0"
    android:weightSum="1">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#836FFF">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/title"/>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:background="#fffff0"
        android:layout_weight="0.62">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#836FFF"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/trade_count"
            android:layout_marginTop="19dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/count"
            android:textSize="90sp"
            android:textColor="#388E8E"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#836FFF"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/trade_tip"
            android:layout_marginBottom="18dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="#a93c3c3c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#fffff0"
                    android:text="消耗卡路里\n0卡"
                    android:textColor="#836FFF"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/walk_time"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="#fffff0"
                    android:layout_weight="1"
                    android:text="今日运动\n0:00:00"
                    android:textColor="#836FFF"
                    android:textSize="15dp" />
                <Button
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="#fffff0"
                    android:layout_weight="1"
                    android:text="今日累计运动\n0km"
                    android:textColor="#836FFF"
                    android:textSize="15dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#fffff0"
                    android:text="@string/open"
                    android:textColor="#836FFF"
                    android:textSize="15dp" />
                <Button
                    android:id="@+id/ave_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#fffff0"
                    android:text="平均速度\n0m/s"
                    android:textColor="#836FFF"
                    android:textSize="15dp"
                    android:singleLine="false"
                    android:layout_gravity="bottom" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyrightInfo"
            android:textColor="#98777777"
            android:textSize="12dp"
            android:textIsSelectable="false" />
    </LinearLayout>

</LinearLayout>
